force-app/main/default/objects/Announcement__c/Announcement__c.object-meta.xml
<CustomObject>
    <description>Track the announcement.</description>
    <label>Announcement</label>
    <nameField>
        <label>Announcement Summary</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Announcements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>