force-app/main/default/objects/Announcement__c/fields/Channel_Type__c.field-meta.xml
<CustomField>
    <fullName>Channel_Type__c</fullName>
    <description>Default is using Salesforce custom notification. The Whatsapp/SMS/Email requires customization or 3rd party app integration.</description>
    <label>Channel Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Notification</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>