force-app/main/default/objects/Announcement__c/fields/Details__c.field-meta.xml
<CustomField>
    <fullName>Details__c</fullName>
    <description>Announcement details.</description>
    <inlineHelpText>Announcement details.</inlineHelpText>
    <label>Details</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>