force-app/main/default/objects/Announcement__c/fields/Notification_Receivers_Contact_Id__c.field-meta.xml
<CustomField>
    <fullName>Notification_Receivers_Contact_Id__c</fullName>
    <description>Semi-colon separated of receiver contact record id. Optional field for also tracking receiver contact ids.</description>
    <inlineHelpText>Semi-colon separated of receiver contact record id. Optional field for also tracking receiver contact ids.</inlineHelpText>
    <label>Notification Receivers Contact Id</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>