force-app/main/default/objects/Announcement__c/fields/Notification_Receivers_Id__c.field-meta.xml
<CustomField>
    <fullName>Notification_Receivers_Id__c</fullName>
    <description>Semi-colon separated of receiver record id. Supported id are: UserId, AccountId, OpportunityId, GroupId, QueueId.</description>
    <inlineHelpText>Semi-colon separated of receiver record id. Supported id are: UserId, AccountId, OpportunityId, GroupId, QueueId.</inlineHelpText>
    <label>Notification Receivers Id</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>