force-app/main/default/objects/Announcement__c/fields/Notification_Sender_Id__c.field-meta.xml
<CustomField>
    <fullName>Notification_Sender_Id__c</fullName>
    <defaultValue>CASESAFEID($User.Id)</defaultValue>
    <description>User id that sends the notification.</description>
    <inlineHelpText>User id that sends the notification.</inlineHelpText>
    <label>Notification Sender Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>