force-app/main/default/objects/Announcement__c/fields/Notification_Target_Type__c.field-meta.xml
<CustomField>
    <fullName>Notification_Target_Type__c</fullName>
    <description>The landing page or record when user clicks on the notification.</description>
    <inlineHelpText>The landing page or record when user clicks on the notification.</inlineHelpText>
    <label>Notification Target Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Named Page (Experience Cloud)</fullName>
            </value>
            <value>
                <fullName>Named Page (Standard)</fullName>
            </value>
            <value>
                <fullName>Record Page</fullName>
            </value>
            <value>
                <fullName>Web Page</fullName>
            </value>
            <value>
                <fullName>Navigation Item Page</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>