force-app/main/default/objects/Announcement__c/fields/Notification_Target_Value__c.field-meta.xml
<CustomField>
    <fullName>Notification_Target_Value__c</fullName>
    <description>The value for the notification target type. This could be either the record id, page name or external url.</description>
    <inlineHelpText>The value for the notification target type. This could be either the record id, page name or external url.</inlineHelpText>
    <label>Notification Target Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>