force-app/main/default/objects/Announcement__c/fields/Published_Datetime__c.field-meta.xml
<CustomField>
    <fullName>Published_Datetime__c</fullName>
    <description>The datetime of when the announcement is published.</description>
    <label>Published Datetime</label>
    <type>DateTime</type>
</CustomField>