force-app/main/default/objects/Announcement__c/fields/Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Record_Id__c</fullName>
    <description>The parent record id for the announcement record.</description>
    <inlineHelpText>The parent record id for the announcement record.</inlineHelpText>
    <label>Record Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>