force-app/main/default/objects/Announcement__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Status of an announcement. Set to Send to publish the notification to receivers.</description>
    <inlineHelpText>Status of an announcement. Set to Send to publish the notification to receivers.</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
            </value>
            <value>
                <fullName>Send</fullName>
            </value>
            <value>
                <fullName>Published</fullName>
                <default>true</default>
                <label>Published</label>
            </value>
            <value>
                <fullName>Archived</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>