force-app/main/default/objects/Announcement__c/validationRules/Require_Announcement_Details.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Announcement_Details</fullName>
    <active>true</active>
    <description>The announcement details is required</description>
    <errorConditionFormula>ISBLANK( TRIM(Details__c) )</errorConditionFormula>
    <errorDisplayField>Details__c</errorDisplayField>
    <errorMessage>Please provide the details.</errorMessage>
</ValidationRule>