force-app/main/default/objects/Announcement__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Published_Datetime__c</columns>
    <columns>Details__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>